fixed logo so it doesn't overlap header

--- a/app/assets/stylesheets/nav.css.scss
+++ b/app/assets/stylesheets/nav.css.scss
@@ -6,8 +6,8 @@
   top: 0px;
   z-index: 10;
   img{
-    width: 12%;
-    margin-top: -40px;
+    height: 200px;
+    margin-top: -30px;
     margin-left: 150px;
   }
   a{
